--- a/Resume.html
+++ b/Resume.html
@@ -12,7 +12,7 @@
 		<ul>
 			<li><a href="email">sumit@example.com</a></li>
 			<li><a href="linkedIn">LinkedIn</a></li>
-			<li><a href="">GitHub</a></li>
+			<li><a href="https://github.com/sumitpanchal1401/codestring_taskno1.git">GitHub</a></li>
 		</ul>
 	</section>
 	
